[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HostButton" type="Button" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 608.0
margin_bottom = 288.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="."]
margin_left = 384.0
margin_top = 416.0
margin_right = 608.0
margin_bottom = 512.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
